more fixes for low contrast backgrounds

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -107,6 +107,9 @@ body.is-edit-mode #navbar #tabs {
 .tab-item:not(.active):hover {
 	background-color: rgba(255, 255, 255, 0.1);
 }
+.theme-background-low-contrast .tab-item:not(.active):hover {
+	background-color: rgba(255, 255, 255, 0.13);
+}
 
 .tab-view-contents {
 	padding: 0 0.8em;
